Switch to Sphinx for documentation

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ services:
 
 before_install:
   - docker build -t jsonschema2db .
+  # Make sure Sphinx works
+  - pip install . sphinx
+  - sphinx-build -M html docs/ docs/_build/
 
 script:
   - docker run jsonschema2db
