treat doc building warnings as errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - docker build -t jsonschema2db .
   # Make sure Sphinx works
   - pip install . sphinx
-  - sphinx-build -M html docs/ docs/_build/
+  - sphinx-build -M html docs/ docs/_build/ -W
 
 script:
   - docker run jsonschema2db
