build doc without dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 before_install:
   - docker build -t jsonschema2db .
   # Make sure Sphinx works
-  - pip install . sphinx
+  - pip install sphinx
   - sphinx-build -M html docs/ docs/_build/ -W
 
 script:
