--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,41 @@
-sudo: required
 language: python
-python:
-- '3.6'
-# services:
-# - docker
-# before_install:
-# - make docs
-script:
-- echo $PYPI_USER
+python: "3.6"
+dist: xenial
+
+stages:
+  - lint
+  - test
+  - name: deploy
+    if: tag IS present
+
+cache:
+  pip: true
+  directories:
+    - "$HOME/.cache/pre-commit"
+
+install:
+  - pip install --upgrade pip
+  - pip install poetry
+  - poetry install -v
+
+jobs:
+  include:
+    - stage: test
+      install:
+        - pip install --upgrade pip
+        - pip install poetry
+        - poetry install -v
+      script:
+        - make test
+    - stage: deploy
+      script:
+        - echo Deploying to PyPI...
+
+deploy:
+  - provider: script
+    script: poetry publish --username $PYPI_PASS --password $PYPI_PASS --build
+    on:
+      repo: clarityai-eng/jsonchema2ddl
+      branch: master
+      python: '3.7'
+      tags: true
