tests: ignore userwarning

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ norecursedirs =
 testpaths = tests
 filterwarnings =
     ignore::DeprecationWarning
+    ignore::UserWarning
 
 [build_sphinx]
 source_dir = docs
