--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "jsonschema2ddl"
 version = "0.0.0"
-description = "Convert jsonschema to SQL tables"
+description = "Generate Database tables from JSON schema"
 authors = ["Pablo San José <pablo.sanjose@clarity.ai>"]
 
 [tool.poetry.scripts]
@@ -11,7 +11,8 @@ vscode = "scripts.setup:vscode"
 python = "^3.7"
 change_case = "^0.5.2"
 iso8601 = "^0.1.12"
-psycopg2 = "^2.7.2"
+psycopg2 = "^2.8.6"
+SQLAlchemy = "^1.3.19"
 
 
 [tool.poetry.dev-dependencies]
@@ -24,6 +25,7 @@ Sphinx = "~2.3.1"
 sphinx-rtd-theme = "0.5.0"
 m2r2 = "0.2.5"
 rope = "~0.17.0"
+testcontainers = "^3.1.0"
 
 
 [build-system]
