--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ stages:
   - lint
   - test
   - name: deploy
-    if: tag IS present
+    # if: tag IS present
 
 cache:
   pip: true
@@ -37,7 +37,7 @@ jobs:
 
 deploy:
   - provider: script
-    script: poetry version $(git describe --tags --abbrev=0) && poetry publish --username $PYPI_PASS --password $PYPI_PASS --build
+    script: poetry version $(git describe --tags --abbrev=0) && poetry publish --username $PYPI_USER --password $PYPI_PASS --build
     on:
       repo: clarityai-eng/jsonschema2ddl
       branch: master
